[tool.poetry]
name = "jobboardapi"
version = "0.1.0"
description = ""
authors = ["Catalin Casuneanu <catalin.casuneanu@jay-software.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
authlib = "^1.2.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
httpx = "^0.25.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.1.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
